<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/home_title"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/statisticFragment"
            android:title="@string/dashboard_title"
            android:icon="@drawable/ic_statistics"/>
        <item
            android:id="@+id/recordFragment"
            android:title="@string/record_title"
            android:icon="@drawable/qr_code"/>
        <item
            android:id="@+id/historyFragment"
            android:title="@string/history_title"
            android:icon="@drawable/ic_history"/>
        <item
            android:id="@+id/profileFragment"
            android:title="@string/profile_title"
            android:icon="@drawable/ic_profile"/>
    </group>
</menu>