<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_column="2"
    android:layout_centerHorizontal="true">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:text="@string/title_name"/>
        <TextView
            android:id="@+id/user_name"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:text="@string/avatar_name"/>
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_nric_passport_no"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/user_ic_passport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/nric_passport_no"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"/>
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_app_id"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/user_app_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/avatar_id"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"/>
    </TableRow>
</TableLayout>