<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layout_centerHorizontal="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/questions_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/question_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/secondaryTextColor"
                android:text="@string/sample_question"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/question_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:text="@string/demo_context"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/primaryColor"
        android:layout_gravity="center">
        <RadioGroup
            android:id="@+id/radioGroup_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">
        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_1"
            android:textColor="@color/primaryTextColor"
            android:textSize="15sp"/>
        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_2"
            android:textColor="@color/primaryTextColor"
            android:textSize="15sp"/>
        </RadioGroup>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>